<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="8dp"
    android:weightSum="4">

    <ImageView
        android:id="@+id/supply_item_image"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/supply_item_image_desc"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/supply_item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/item_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall" />

                <TextView
                    android:id="@+id/supply_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/supply_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quantity_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall" />

                <TextView
                    android:id="@+id/supply_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/supply_crop_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/crop_label"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <TextView
                android:id="@+id/supply_crop"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/placeholder"
                android:textAppearance="?attr/textAppearanceListItemSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/supply_supplier_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/supplier_label"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <TextView
                android:id="@+id/supply_supplier"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/placeholder"
                android:textAppearance="?attr/textAppearanceListItemSmall" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</LinearLayout>