<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="8dp"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/date_label"
            android:textAppearance="?attr/textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/placeholder"
            android:textAppearance="?attr/textAppearanceListItemSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_crop_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/date_crop_label"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <TextView
                android:id="@+id/date_crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/placeholder"
                android:textAppearance="?attr/textAppearanceListItemSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_action_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/date_action_label"
                android:textAppearance="?attr/textAppearanceLabelSmall" />

            <TextView
                android:id="@+id/date_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/placeholder"
                android:textAppearance="?attr/textAppearanceListItemSmall" />


        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/check_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="4dp"
            android:text="@string/check_label"
            android:textAppearance="?attr/textAppearanceLabelSmall" />

        <CheckBox
            android:id="@+id/check_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAppearance="?attr/textAppearanceLabelSmall" />

    </LinearLayout>
</LinearLayout>