<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity" >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/del_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/del_button_desc"
        android:focusable="true"
        map:layout_constraintBottom_toTopOf="@+id/add_floating_button"
        map:layout_constraintEnd_toEndOf="parent"
        map:srcCompat="@android:drawable/ic_menu_delete"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_button_desc"
        android:focusable="true"
        map:layout_constraintBottom_toTopOf="@+id/send_floating_button"
        map:layout_constraintEnd_toEndOf="parent"
        map:srcCompat="@android:drawable/ic_menu_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/send_button_desc"
        android:focusable="true"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:srcCompat="@android:drawable/ic_menu_send" />

</androidx.constraintlayout.widget.ConstraintLayout>

