<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/out_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/out_label"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="@color/md_theme_light_primary"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/outcome_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/finance_line" />

        <TextView
            android:id="@+id/total_outcome_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total"
            android:textAppearance="?attr/textAppearanceLabelSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/expected_total_income_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/expected_value_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/expected_total_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/confirmed_total_income_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/confirmed_value_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/confirmed_total_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/in_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_labels"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="@color/md_theme_light_primary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/income_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/finance_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/expected_total_outcome_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/expected_value_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/expected_total_outcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/confirmed_total_outcome_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/confirmed_value_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/confirmed_total_outcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/balance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance_label"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="@color/md_theme_light_primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/expected_value_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/expected_value_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall" />

                <TextView
                    android:id="@+id/expected_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/confirmed_value_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/confirmed_value_label"
                    android:textAppearance="?attr/textAppearanceLabelSmall" />

                <TextView
                    android:id="@+id/confirmed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?attr/textAppearanceListItemSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>

